--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "creditrama-team-d-bankaccount-service"]
 	path = creditrama-team-d-bankaccount-service
 	url = https://github.com/pns-si5-al-creditrama-d-1920/creditrama-team-d-bankaccount-service
+[submodule "creditrama-team-d-transaction-service"]
+	path = creditrama-team-d-transaction-service
+	url = https://github.com/pns-si5-al-creditrama-d-1920/creditrama-team-d-transaction-service
