--- a/greenland.yml
+++ b/greenland.yml
@@ -12,7 +12,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: docker
       POSTGRES_DB: creditrama
-      LOGIN_HOST: ${FRANCE_HOST}
+      AUTHORIZATION_HOST: ${FRANCE_HOST}
       KAFKA_BROKER: kafka
 
   postgres:
