--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,35 @@ services:
       POSTGRES_PASSWORD: docker
       POSTGRES_DB: creditrama_client
       AUTHORIZATION_HOST: authorization
+      BANKACCOUNT_HOST: bankaccount
+      KAFKA_BROKER: kafka
+
+  bankaccount:
+    image: creditrama-d-bankaccount-service:0.0.2-SNAPSHOT
+    container_name: bankaccount
+    ports:
+      - 8083:8083
+    environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: docker
+      POSTGRES_DB: creditrama_accounts
+      AUTHORIZATION_HOST: authorization
+      KAFKA_BROKER: kafka
+
+  transaction:
+    image: creditrama-d-transaction-service:0.0.2-SNAPSHOT
+    container_name: transaction
+    ports:
+      - 8084:8084
+    environment:
+      MONGO_HOST: mongo
+      MONGO_PORT: 27017
+      #      MONGO_USER: postgres
+      #      MONGO_PASSWORD: docker
+      MONGO_DB: transactions_db
+      AUTHORIZATION_HOST: authorization
+      BANKACCOUNT_HOST: bankaccount
       KAFKA_BROKER: kafka
 
   authorization:
@@ -52,14 +81,22 @@ services:
       AUTHORIZATION_HOST: http://authorization:9191
 
   postgres:
-    image: postgres:12
+    image: postgres:12-alpine
     container_name: postgres
     ports:
       - 5432:5432
+    volumes:
+      - ./pg-init-scripts:/docker-entrypoint-initdb.d
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: docker
       POSTGRES_MULTIPLE_DATABASES: creditrama_client,creditrama_accounts
+
+  mongo:
+    image: mongo:3.6.15
+    ports:
+      - 27017:27017
+    container_name: mongo
 
   zookeeper:
     image: confluentinc/cp-zookeeper:5.3.1
@@ -95,16 +132,19 @@ services:
       - zookeeper
       - kafka
       - postgres
-    command: zookeeper:2181 kafka:9092 postgres:5432
+      - mongo
+    command: zookeeper:2181 kafka:9092 postgres:5432 mongo:27017
     container_name: start_dependencies_kafka_database
 
   start_dependencies_spring:
     image: dadarek/wait-for-dependencies:0.2
     depends_on:
+      - bankaccount
       - client
       - authorization
       - notification
-    command: client:8080 authorization:9191 notification:8081
+      - transaction
+    command: bankaccount:8083 client:8080 authorization:9191 notification:8081 transaction:8084
     container_name: start_dependencies_spring
     environment:
       SLEEP_LENGTH: 10
