--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 	path = creditrama-team-d-bankaccount-service
 	url = https://github.com/pns-si5-al-creditrama-d-1920/creditrama-team-d-bankaccount-service
 
+[submodule "creditrama-team-d-core-api"]
+	path = creditrama-team-d-core-api
+	url = https://github.com/pns-si5-al-creditrama-d-1920/creditrama-team-d-core-api
